#15  standardize each file

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -347,7 +347,9 @@
    "id": "6e89ff7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Standardize Each File"
+   ]
   },
   {
    "cell_type": "code",
@@ -355,7 +357,39 @@
    "id": "c5c92058",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def standardize_dataframe(df, file_name):\n",
+    "\n",
+    "    standardized = pd.DataFrame()\n",
+    "    \n",
+    "    # Extract subject\n",
+    "    if 'subject' in df.columns:\n",
+    "        standardized['subject'] = df['subject']\n",
+    "    elif 'Subject' in df.columns:\n",
+    "        standardized['subject'] = df['Subject']\n",
+    "    else:\n",
+    "        standardized['subject'] = ''\n",
+    "        print(f\"{file_name}: No subject column\")\n",
+    "    \n",
+    "    # Extract body\n",
+    "    if 'body' in df.columns:\n",
+    "        standardized['body'] = df['body']\n",
+    "    elif 'Body' in df.columns:\n",
+    "        standardized['body'] = df['Body']\n",
+    "    else:\n",
+    "        standardized['body'] = ''\n",
+    "        print(f\"{file_name}: No body column\")\n",
+    "    \n",
+    "    # Extract label\n",
+    "    if 'label' in df.columns:\n",
+    "        standardized['label'] = df['label']\n",
+    "    elif 'Label' in df.columns:\n",
+    "        standardized['label'] = df['Label']\n",
+    "    else:\n",
+    "        raise ValueError(f\"No label column found in {file_name}\")\n",
+    "    \n",
+    "    return standardized"
+   ]
   },
   {
    "cell_type": "code",
@@ -384,7 +418,22 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "standardized_dfs = []\n",
+    "\n",
+    "for df, file_info in zip(raw_dataframes, file_info):\n",
+    "    file_name = file_info['filename']\n",
+    "    print(f\"{file_name}\")\n",
+    "    \n",
+    "    try:\n",
+    "        std_df = standardize_dataframe(df, file_name)\n",
+    "        print(f\"Standardized: {len(std_df)} rows, 3 columns\")\n",
+    "        standardized_dfs.append(std_df)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "print(f\"\\n Successfully standardized {len(standardized_dfs)}/{len(raw_dataframes)} files\")"
+   ]
   },
   {
    "cell_type": "code",
