#16  merge all files

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -452,7 +452,12 @@
     }
    ],
    "source": [
-    "\n"
+    "# Concatenate all standardized dataframes\n",
+    "merged_df = pd.concat(standardized_dfs, ignore_index=True)\n",
+    "\n",
+    "print(f\"Merged dataset:\")\n",
+    "print(f\"  Shape: {merged_df.shape}\")\n",
+    "print(f\"  Columns: {merged_df.columns.tolist()}\")\n"
    ]
   },
   {
@@ -469,7 +474,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "merged_df.to_csv(PREPROCESSED_DATA_PATH / 'merged_raw.csv', index=False)\n",
+    "print(f\" Saved: {PREPROCESSED_DATA_PATH / 'merged_raw.csv'}\")"
+   ]
   },
   {
    "cell_type": "code",
