--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -485,7 +485,9 @@
    "id": "b28ba1e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Data Cleaning"
+   ]
   },
   {
    "cell_type": "code",
@@ -502,7 +504,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df = merged_df.copy()\n",
+    "initial_count = len(df)\n",
+    "print(f\"Before cleaning: {initial_count:,} rows\\n\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -510,7 +516,9 @@
    "id": "c2e5043b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Handle missing values"
+   ]
   },
   {
    "cell_type": "code",
@@ -529,7 +537,21 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Remove rows with missing labels\n",
+    "missing_labels = df['label'].isna().sum()\n",
+    "print(f\"Rows with missing labels: {missing_labels}\")\n",
+    "if missing_labels > 0:\n",
+    "    df = df.dropna(subset=['label'])\n",
+    "    print(f\"Removed {missing_labels} rows\")\n",
+    "\n",
+    "# Fill missing subject/body with empty string\n",
+    "df['subject'] = df['subject'].fillna('')\n",
+    "df['body'] = df['body'].fillna('')\n",
+    "print(f\"Filled missing subject/body with empty strings\")\n",
+    "\n",
+    "print(f\"\\nRows remaining: {len(df):,}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -547,7 +569,27 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Convert to string\n",
+    "df['subject'] = df['subject'].astype(str)\n",
+    "df['body'] = df['body'].astype(str)\n",
+    "\n",
+    "# Convert labels to int and validate\n",
+    "df['label'] = df['label'].astype(int)\n",
+    "unique_labels = sorted(df['label'].unique())\n",
+    "\n",
+    "# Check for invalid labels\n",
+    "invalid = ~df['label'].isin([0, 1])\n",
+    "if invalid.sum() > 0:\n",
+    "    print(f\"Found {invalid.sum()} rows with invalid labels\")\n",
+    "    print(f\"Invalid values: {df[invalid]['label'].unique()}\")\n",
+    "    df = df[df['label'].isin([0, 1])]\n",
+    "    print(f\"Removed {invalid.sum()} rows with invalid labels\")\n",
+    "else:\n",
+    "    print(\"All labels are valid (0 or 1)\")\n",
+    "\n",
+    "print(f\"\\nRows remaining: {len(df):,}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -555,7 +597,9 @@
    "id": "e54854ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Text Cleaning"
+   ]
   },
   {
    "cell_type": "code",
@@ -574,7 +618,52 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def clean_text(text):\n",
+    "    if not isinstance(text, str) or text == '' or pd.isna(text):\n",
+    "        return ''\n",
+    "    \n",
+    "    text = str(text)\n",
+    "    \n",
+    "    # 1. Decode HTML entities (&lt; &gt; &amp; etc.)\n",
+    "    text = html.unescape(text)\n",
+    "    \n",
+    "    # 2. Remove HTML tags \n",
+    "    text = BeautifulSoup(text, \"html.parser\").get_text(\" \")\n",
+    "    \n",
+    "    # 3. Normalize Unicode characters \n",
+    "    text = unicodedata.normalize(\"NFKC\", text)\n",
+    "    \n",
+    "    # 4. Remove alternating junk patterns like >t=t=t=t= or +=+=+=+= (over 5)\n",
+    "    text = re.sub(r'(.{1,3})\\1{5,}', '', text)\n",
+    "    \n",
+    "    # 5. Remove repeated junk characters: ===, ---, ___, +++ (over 3)\n",
+    "    text = re.sub(r'([=\\-_+*#~|\\\\/<>])\\1{2,}', '', text)\n",
+    "    \n",
+    "    # 6. Remove repeated punctuation\n",
+    "    text = re.sub(r'\\?{2,}', '?', text)\n",
+    "    text = re.sub(r'!{2,}', '!', text)\n",
+    "    text = re.sub(r'\\.{3,}', '...', text) \n",
+    "    \n",
+    "    # 7. Remove excessive letter/number repetitions\n",
+    "    text = re.sub(r'(\\w)\\1{3,}', r'\\1\\1\\1', text)\n",
+    "    \n",
+    "    # 10. Collapse whitespace and trim\n",
+    "    text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "    \n",
+    "    return text\n",
+    "\n",
+    "df['subject'] = df['subject'].apply(clean_text)\n",
+    "df['body'] = df['body'].apply(clean_text)\n",
+    "print(\"Text cleaning is done\")\n",
+    "\n",
+    "# Create combined text column\n",
+    "df['text'] = df['subject'] + ' ' + df['body']\n",
+    "df['text'] = df['text'].str.strip()\n",
+    "print(\"Created combined 'text' column to remove duplicates\")\n",
+    "\n",
+    "print(f\"\\nRows remaining: {len(df):,}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -582,7 +671,9 @@
    "id": "439b666a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Remove empty/invalid rows"
+   ]
   },
   {
    "cell_type": "code",
@@ -602,7 +693,23 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Remove rows where both subject and body are empty\n",
+    "empty_both = (df['subject'] == '') & (df['body'] == '')\n",
+    "print(f\"Rows with empty subject AND body: {empty_both.sum()}\")\n",
+    "if empty_both.sum() > 0:\n",
+    "    df = df[~empty_both]\n",
+    "    print(f\"Removed {empty_both.sum()} rows\")\n",
+    "\n",
+    "# Remove rows with very short text (< 5 characters)\n",
+    "very_short = df['text'].str.len() < 5\n",
+    "print(f\"Rows with text less than 5 characters: {very_short.sum()}\")\n",
+    "if very_short.sum() > 0:\n",
+    "    df = df[~very_short]\n",
+    "    print(f\"Removed {very_short.sum()} rows\")\n",
+    "\n",
+    "print(f\"\\nRows remaining: {len(df):,}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -610,7 +717,9 @@
    "id": "56f6c9ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Remove Duplicates"
+   ]
   },
   {
    "cell_type": "code",
@@ -633,7 +742,22 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Find duplicates based on text\n",
+    "duplicates = df.duplicated(subset=['text'], keep='first')\n",
+    "print(f\"Duplicate rows: {duplicates.sum()}\")\n",
+    "\n",
+    "if duplicates.sum() > 0:\n",
+    "    # Show some examples\n",
+    "    print(\"\\nExample duplicates:\")\n",
+    "    dup_text = df[duplicates]['text'].iloc[0][:100]\n",
+    "    print(f\"'{dup_text}...'\")\n",
+    "    \n",
+    "    df = df[~duplicates]\n",
+    "    print(f\"\\nRemoved {duplicates.sum()} duplicate rows\")\n",
+    "\n",
+    "print(f\"\\nRows remaining: {len(df):,}\")"
+   ]
   },
   {
    "cell_type": "code",
