#18 final dataset and validation

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -765,7 +765,9 @@
    "id": "a999a4a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Final Dataset and Validation"
+   ]
   },
   {
    "cell_type": "code",
@@ -853,7 +855,16 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "# Create final dataset with all columns\n",
+    "final_df = df[['subject', 'body', 'label']].copy()\n",
+    "final_df = final_df.reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Final dataset shape: {final_df.shape}\")\n",
+    "print(f\"Columns: {final_df.columns.tolist()}\")\n",
+    "print(f\"\\nFirst 3 rows:\")\n",
+    "display(final_df.head(3))"
+   ]
   },
   {
    "cell_type": "code",
