#19 training/validation/tests

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -872,7 +872,9 @@
    "id": "b412ebad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Train/Validation/Test Split"
+   ]
   },
   {
    "cell_type": "code",
@@ -906,7 +908,46 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Shuffle data first\n",
+    "final_df = final_df.sample(frac=1, random_state=RANDOM_STATE).reset_index(drop=True)\n",
+    "\n",
+    "# Separate features and labels\n",
+    "X = final_df[['subject', 'body']]\n",
+    "y = final_df['label']\n",
+    "\n",
+    "# First split: 70% train, 30% temp(test+validation)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=RANDOM_STATE, stratify=y\n",
+    ")\n",
+    "\n",
+    "# Second split: 15% val, 15% test\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_temp, y_temp, test_size=0.5, random_state=RANDOM_STATE, stratify=y_temp\n",
+    ")\n",
+    "\n",
+    "print(\"Data Split Summary:\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "splits = [\n",
+    "    ('Train', X_train, y_train),\n",
+    "    ('Validation', X_val, y_val),\n",
+    "    ('Test', X_test, y_test)\n",
+    "]\n",
+    "\n",
+    "for name, X_split, y_split in splits:\n",
+    "    total = len(y_split)\n",
+    "    phishing = (y_split == 1).sum()\n",
+    "    legit = (y_split == 0).sum()\n",
+    "    pct = total / len(final_df) * 100\n",
+    "    \n",
+    "    print(f\"\\n{name} set:\")\n",
+    "    print(f\"Total:     {total:,} ({pct:.1f}%)\")\n",
+    "    print(f\"Phishing:  {phishing:,} ({phishing/total*100:.2f}%)\")\n",
+    "    print(f\"Legitimate:{legit:,} ({legit/total*100:.2f}%)\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)"
+   ]
   },
   {
    "cell_type": "code",
