#20 save preprocessed data

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -970,7 +970,36 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Create output directory\n",
+    "PREPROCESSED_DATA_PATH.mkdir(exist_ok=True)\n",
+    "\n",
+    "# Save full dataset\n",
+    "final_df.to_csv(PREPROCESSED_DATA_PATH / 'phishing_full_clean.csv', index=False)\n",
+    "print(f\"Saved: {PREPROCESSED_DATA_PATH / 'phishing_full_clean.csv'}\")\n",
+    "\n",
+    "# Save train split\n",
+    "train_df = X_train.copy()\n",
+    "train_df['label'] = y_train.values\n",
+    "train_df.to_csv(PREPROCESSED_DATA_PATH / 'train.csv', index=False)\n",
+    "print(f\"Saved: {PREPROCESSED_DATA_PATH / 'train.csv'}\")\n",
+    "\n",
+    "# Save validation split\n",
+    "val_df = X_val.copy()\n",
+    "val_df['label'] = y_val.values\n",
+    "val_df.to_csv(PREPROCESSED_DATA_PATH / 'val.csv', index=False)\n",
+    "print(f\"Saved: {PREPROCESSED_DATA_PATH / 'val.csv'}\")\n",
+    "\n",
+    "# Save test split\n",
+    "test_df = X_test.copy()\n",
+    "test_df['label'] = y_test.values\n",
+    "test_df.to_csv(PREPROCESSED_DATA_PATH / 'test.csv', index=False)\n",
+    "print(f\"Saved: {PREPROCESSED_DATA_PATH / 'test.csv'}\")\n",
+    "\n",
+    "print(f\"\\n{'='*70}\")\n",
+    "print(\"All files saved successfully!\")\n",
+    "print(f\"{'='*70}\")"
+   ]
   },
   {
    "cell_type": "code",
