Fix pandas deprecations and improve preprocessing

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d80ae1e1",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,9 @@
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split\n",
     "import warnings\n",
+    "import html\n",
+    "from bs4 import BeautifulSoup\n",
+    "import unicodedata\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -21,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "15172cdd",
    "metadata": {},
    "outputs": [],
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "622c1758",
    "metadata": {},
    "outputs": [
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e7946edb",
    "metadata": {},
    "outputs": [
@@ -99,9 +102,10 @@
       "1      1     1  \n",
       "\n",
       "Label distribution:\n",
+      "label\n",
       "0    17312\n",
       "1    21842\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "======================================================================\n",
       "File 2: Enron.csv\n",
@@ -124,9 +128,10 @@
       "1      0  \n",
       "\n",
       "Label distribution:\n",
+      "label\n",
       "0    15791\n",
       "1    13976\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "======================================================================\n",
       "File 3: Ling.csv\n",
@@ -149,9 +154,10 @@
       "1      0  \n",
       "\n",
       "Label distribution:\n",
+      "label\n",
       "0    2401\n",
       "1     458\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "======================================================================\n",
       "File 4: Nazario.csv\n",
@@ -175,8 +181,9 @@
       "1      1  \n",
       "\n",
       "Label distribution:\n",
+      "label\n",
       "1    1565\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "======================================================================\n",
       "File 5: Nigerian_Fraud.csv\n",
@@ -207,8 +214,9 @@
       "1     0      1  \n",
       "\n",
       "Label distribution:\n",
+      "label\n",
       "1    3332\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "======================================================================\n",
       "File 6: SpamAssasin.csv\n",
@@ -239,9 +247,10 @@
       "1      0     1  \n",
       "\n",
       "Label distribution:\n",
+      "label\n",
       "0    4091\n",
       "1    1718\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "======================================================================\n",
       "Summary of all files:\n",
@@ -263,7 +272,7 @@
     "def load_nazario_fixed(path):\n",
     "    \"\"\"Load and repair Nazario dataset\"\"\"\n",
     "    try:\n",
-    "        df = pd.read_csv(path, encoding=\"utf-8\", error_bad_lines=False)\n",
+    "        df = pd.read_csv(path, encoding=\"utf-8\", on_bad_lines='warn')\n",
     "        if {\"subject\",\"body\",\"label\"}.issubset(df.columns):\n",
     "            df = df[[\"subject\",\"body\",\"label\"]]\n",
     "            df[\"label\"] = 1\n",
@@ -307,10 +316,10 @@
     "        if \"nazario\" in file_path.name.lower():\n",
     "            df = load_nazario_fixed(file_path)\n",
     "        else:\n",
-    "            df = pd.read_csv(file_path, encoding='utf-8', error_bad_lines=False)\n",
+    "            df = pd.read_csv(file_path, encoding='utf-8', on_bad_lines='warn')\n",
     "            encoding = 'utf-8'\n",
     "    except:\n",
-    "            df = pd.read_csv(file_path, encoding='latin-1', error_bad_lines=False)\n",
+    "            df = pd.read_csv(file_path, encoding='latin-1', on_bad_lines='warn')\n",
     "            encoding = 'latin-1'\n",
     "    \n",
     "    print(f\"Encoding: {encoding}\")\n",
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6e89ff7e",
    "metadata": {},
    "outputs": [],
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c5c92058",
    "metadata": {},
    "outputs": [],
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ccde1fe8",
    "metadata": {},
    "outputs": [
@@ -437,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "72956b81",
    "metadata": {},
    "outputs": [
@@ -462,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b2caaf5b",
    "metadata": {},
    "outputs": [
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b28ba1e6",
    "metadata": {},
    "outputs": [],
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f1a8aefb",
    "metadata": {},
    "outputs": [
@@ -512,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c2e5043b",
    "metadata": {},
    "outputs": [],
@@ -522,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "aff0cc97",
    "metadata": {},
    "outputs": [
@@ -555,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "24af1357",
    "metadata": {},
    "outputs": [
@@ -593,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e54854ce",
    "metadata": {},
    "outputs": [],
@@ -603,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e4edec0f",
    "metadata": {},
    "outputs": [
@@ -667,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "439b666a",
    "metadata": {},
    "outputs": [],
@@ -677,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2298d82e",
    "metadata": {},
    "outputs": [
@@ -713,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "56f6c9ce",
    "metadata": {},
    "outputs": [],
@@ -723,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c410b452",
    "metadata": {},
    "outputs": [
@@ -761,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a999a4a5",
    "metadata": {},
    "outputs": [],
@@ -771,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b7b3943c",
    "metadata": {},
    "outputs": [
@@ -868,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b412ebad",
    "metadata": {},
    "outputs": [],
@@ -878,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a29e450b",
    "metadata": {},
    "outputs": [
@@ -951,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a021d453",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1021,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1026,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
