--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -1021,7 +1021,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.11.0)",
    "language": "python",
    "name": "python3"
   },
@@ -1035,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
